--- a/src/main/resources/application-homologacao.yml
+++ b/src/main/resources/application-homologacao.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     url: jdbc:oracle:thin:@oracle.fiap.com.br:1521:ORCL
-    username:
-    password:
+    username: rm552295
+    password: 050405
   jpa:
     show-sql: true
     open-in-view: true
